manifest/back-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ssac-ing
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    #alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/target-type: instance
    #alb.ingress.kubernetes.io/target-type: ip
    external-dns.alpha.kubernetes.io/hostname: www.log-land.com
    ## 퍼블릭 서브넷(az 안겹치게)으로 계속 변경
    alb.ingress.kubernetes.io/subnets: subnet-06f01ed0445776c13, subnet-00b1116512d93b48a
    alb.ingress.kubernetes.io/backend-protocol: "HTTP"
    external-dns.alpha.kubernetes.io/ttl: "100"
    alb.ingress.kubernetes.io/certificate-arn: 
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'
spec:
  tls:
    - hosts:
        - www.log-land.com
  ingressClassName: alb
  defaultBackend:
    service:
      name: ssac-front
      port:
        number: 443
  rules:
    - host: www.log-land.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ssac-front
                port:
                  number: 443
          # - path: /main/
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-back
          #       port:
          #         number: 80
          # - path: /healthcheck
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-back
          #       port:
          #         number: 80
          # - path: /auth/kakao
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-back
          #       port:
          #         number: 80
          # - path: /upload
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-back
          #       port:
          #         number: 80
          # - path: /timeline
          #   pathType: Prefix
          #   backend:
          #     service:
          #       name: ssac-back
          #       port:
          #         number: 80
